# tensorflow-haskell-example

./: .gitignore  LICENSE  Makefile  README.md  stack.yaml  tensorflow-minimal-example.cabal
app/: Main.hs
docker/: Dockerfile
