name:                tensorflow-minimal-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nishiuramakoto/tensorflow-haskell-example#readme
license:             GPL-3
license-file:        LICENSE
author:              Makoto Nishiura
maintainer:          nishiuramakoto@gmail.com
copyright:           Makoto Nishiura
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       HUnit >= 1.3.1.2
                     , base >= 4.7 && < 5
                     , random >= 1.1
  default-language:    Haskell2010

executable linreg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       HUnit >= 1.3.1.2
                     , base
                     , base-orphans >= 0.6
                     , random >= 1.1
                     , tensorflow-minimal-example
                     , tensorflow >= 0.1.0.2
                     , tensorflow-opgen >= 0.1.0.0
                     , tensorflow-ops   >= 0.1.0.0
                     , tensorflow-core-ops >= 0.1.0.0
                     , normaldistribution  >= 1.1.0.3
                     , statistics >= 0.14.0.2
                     , vector >= 0.11
  default-language:    Haskell2010

test-suite linreg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       HUnit >= 1.3.1.2
                     , base
                     , base-orphans >= 0.6
                     , random >= 1.1
                     , tensorflow-minimal-example
                     , tensorflow   >= 0.1.0.2
                     , tensorflow-opgen  >= 0.1.0.0
                     , tensorflow-ops     >= 0.1.0.0
                     , tensorflow-core-ops  >= 0.1.0.0
                     , normaldistribution  >= 1.1.0.3
                     , statistics >= 0.14.0.2
                     , vector >= 0.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nishiuramakoto/tensorflow-haskell-example.git
